# robotdesigner

./: Dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: docker-image-new.yml  docker-image.yml
robotdesigner/: colconbuildws.bash  createpackage.bash  createws.bash  new_implement.py  new_test.py  urdf.py  write_launch.py
serialrobot/: addrviz.bash  colconbuildws.bash  createpackage.bash  destroypackage.bash  main.py  urdf.py  write_launch.py  write_setup.py
tests/: test_main.py
