[tool.poetry]
name = "robotdesigner"
version = "0.1.0"
description = ""
authors = ["Vaish <vaishnavahari.seenivasan@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
roboticstoolbox-python = "^1.1.0"
scipy = "^1.11.4"
pydantic = "^2.5.2"
ipykernel = "^6.27.1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
